--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/TestMap.TestMap
+GameDefaultMap=/Game/StarterContent/Maps/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Blueprints/VehiclePhysicsGameModeBaseBP.VehiclePhysicsGameModeBaseBP_C
 
 [/Script/Engine.Engine]
@@ -13,4 +13,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
